--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-size: 16px;
+    font-size: 14px;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -96,6 +96,7 @@ button {
     margin-top: 30px;
     border: 1px solid #E5E5E5;
     border-radius: 5px;
+    text-align: justify;
 }
 
 .content-foot {
@@ -162,4 +163,113 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+
+/* page1.html */
+
+.page {
+    height: 350px;
+}
+
+.link-search-authorization a {
+    font-size: 15px;
+    color: white;
+}
+
+.head-comment {
+    display: flex;
+    justify-content: stretch;
+    text-align: justify;
+    padding: 0;
+}
+
+.avatar {
+    width: 40px;
+    height: 40px;
+    background-color: #000;
+    border-radius: 100px;
+    margin-right: 15px;
+    margin-top: 22px;
+}
+
+.textarea {
+    width: 100%;
+}
+
+.textarea textarea {
+    width: 100%;
+    border: 1px solid #E5E5E5;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+
+/* authorisation */
+
+.blok-login {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+}
+
+.authorization {
+    width: 590px;
+    display: flex;
+    flex-wrap: wrap;
+    align-self: flex-start;
+    margin-right: 50px;
+}
+
+.authorization input {
+    margin-bottom: 10px;
+}
+
+.input-all input {
+    width: 100%;
+    border: 1px solid #E5E5E5;
+    border-radius: 5px;
+    height: 34px;
+    padding-left: 20px;
+    box-shadow: 0 1px 2px #E5E5E5;
+}
+
+.registration-all {
+    display: flex;
+    text-align: center;
+    flex-wrap: wrap;
+}
+
+.registration {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.registration:not(:last-of-type) {
+    margin-right: 20px;
+}
+
+.registration:not(:first-of-type) {
+    margin-top: 54px;
+}
+
+.registration input {
+    margin-bottom: 10px;
+    margin-top: 0;
+}
+
+.button-authorization {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.button-registration {
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.test {
+    display: flex;
+    justify-content: space-between;
 }
