--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ button {
     border: 1px solid #E5E5E5;
     border-radius: 5px;
     height: 34px;
-    padding-left: 20px;
+    padding: 0 20px;
     box-shadow: 0 1px 2px #E5E5E5;
 }
 
@@ -254,6 +254,7 @@ button {
     display: flex;
     text-align: center;
     flex-wrap: wrap;
+    width: 100%;
 }
 
 .registration {
@@ -289,4 +290,14 @@ button {
 .test {
     display: flex;
     justify-content: space-between;
+}
+
+
+/* block news */
+
+.wrap-news {
+    margin: 40px 0;
+    background-color: #E9E9E9;
+    width: 100%;
+    height: 500px;
 }
