--- a/css/style.css
+++ b/css/style.css
@@ -146,8 +146,6 @@ button {
     margin-top: 0;
 }
 
-.content-top-right-alig {}
-
 .content-bottom {
     width: 100%;
     box-shadow: 1px 15px 35px #E5E5E5;
@@ -295,9 +293,91 @@ button {
 
 /* block news */
 
+.logo a {
+    text-decoration: none;
+    color: #fff;
+}
+
 .wrap-news {
     margin: 40px 0;
     background-color: #E9E9E9;
     width: 100%;
-    height: 500px;
+    padding: 1px 0 20px 0;
+}
+
+.wrap-news h3 {
+    margin-left: 50px;
+    margin-bottom: 20px;
+}
+
+.param-news {
+    margin: 0 100px;
+}
+
+.input-news-all {
+    border: 1px solid #E5E5E5;
+    border-radius: 5px;
+    height: 34px;
+    padding: 0 2%;
+    box-shadow: 0 1px 2px #E5E5E5;
+}
+
+.input-news {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.input-news input {
+    width: 40%;
+}
+
+.textarea-news-little {
+    margin-bottom: 20px;
+}
+
+.textarea-news-little textarea {
+    padding: 1% 2%;
+    width: 96%;
+    height: 100px;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.textarea-news-big {
+    margin-bottom: 20px;
+}
+
+.textarea-news-big textarea {
+    padding: 1% 2%;
+    width: 96%;
+    height: 200px;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.input-news-bottom {}
+
+
+/* new_user */
+
+.wrap-news-user {
+    display: flex;
+    justify-content: space-between;
+}
+
+.input-news-user {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+
+.input-news-user input {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.input-news-user button {
+    width: 100%;
+    margin-bottom: 10px;
 }
